swapping works. worked on a little styling. need to deploy soon. need to fix line-breaks so it breaks on a .

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -19,7 +19,7 @@
   line-height: 1.5;
   list-style-type: none;
   letter-spacing: .03em;
-  padding: .35em;
+  padding: .35em 0;
   text-align: center;
 }
 a {
@@ -43,9 +43,9 @@ li a {
 /*  font-weight: 500;*/
   text-align: center;
 }
-#story {
+.content {
   color: #704214;
-/*  cursor: pointer;*/
+  cursor: pointer;
   font-size: 1.5em;
   font-weight: 200;
   text-indent: 3em;
@@ -54,8 +54,7 @@ li a {
   line-height: 1.5;
   margin: 10px 80px 10px;
   padding: 20px 45px 75px;
-  word-spacing: .25em;
-}
+} 
 .hidden {
   display: none;
   visibility: hidden;
@@ -65,6 +64,7 @@ li a {
   color: black;
   cursor: pointer;
   text-decoration: underline;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
 .wordOver {
   font-size: 3em;
